ping-pong--go-chart/templates/virtual-service.echo.yaml
# Copyright 2019 Bnaya Eshet © 
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

######################################################################################
# virtual-service:
# define the routing.
#
# https://istio.io/docs/reference/config/istio.networking.v1alpha3/#VirtualService
# https://istio.io/help/ops/traffic-management/deploy-guidelines/
######################################################################################

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bnaya-echo-virtual-service
spec:
  hosts:
  - "*" # target-service
  gateways:
  - ping-pong-gateway
#  - mesh # internal communication
  http:
  - match:
    - uri:
        prefix: /api/v1/echo
    rewrite:
      uri: /
    route:
    - destination:
        host: bnaya-echo-service
        port:
          number: 80
        subset: go 
      weight: 80
    - destination: # Destination indicates the network addressable service to which the request/connection will be sent after processing a routing rule.
        host: bnaya-echo-service
        port:
          number: 80
        subset: cs  # defined in the destination rule
      weight: 10
    - destination:
        host: bnaya-echo-service
        port:
          number: 80
        subset: js 
      weight: 10

  - match:
    - uri:
        prefix: /api/js/echo
    rewrite:
      uri: /
    route: 
    - destination: 
        host: bnaya-echo-service
        port:
          number: 80
        subset: js # defined in the destination rule

  - match:
    - uri:
        prefix: /api/cs/echo
    rewrite:
      uri: /
    route: 
    - destination: 
        host: bnaya-echo-service
        port:
          number: 80
        subset: cs # defined in the destination rule

  - match:
    - uri:
        prefix: /api/go/echo
    rewrite:
      uri: /
    route: 
    - destination: 
        host: bnaya-echo-service
        port:
          number: 80
        subset: go # defined in the destination rule
